--- a/src/components/Confirmation/Confirmation.module.css
+++ b/src/components/Confirmation/Confirmation.module.css
@@ -66,7 +66,7 @@
 
 .Story {
 	max-height: 150px;
-	overflow-y: scroll;
+	overflow-y: auto;
 	padding-right: 12px;
 }
 
