--- a/src/containers/NFTView/NFTView.module.css
+++ b/src/containers/NFTView/NFTView.module.css
@@ -216,7 +216,7 @@
 
 .History ul {
 	max-height: 400px;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .History span {
