--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -251,6 +251,32 @@ button {
 	user-select: none; /* Standard */
 }
 
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+*::-webkit-scrollbar-corner {
+	background: rgba(0, 0, 0, 0);
+	height: 0;
+	width: 0;
+}
+
+*::-webkit-scrollbar-track {
+	background-color: none;
+}
+
+*::-webkit-scrollbar {
+	width: 6px;
+	background-color: none;
+}
+
+*::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-color: rgba(60, 161, 255, 0.2);
+}
+
 /*
  *
  * Custom HTML Elements 
